internal/lang/test/testdata/errors/wrong_arg_type.scampi
module main

func double(n: int) int {
  return n + n
}

let x = double("not a number")
